intro: add missing link to the project home

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -252,6 +252,7 @@ ac5 = var(--ac-5)
         --message: 'The v3 is almost here! It will be released in a week ' + \
                    'from now. This update is here to let you know about ' + \
                    'upcoming changes – see the changelog for more info. '
+        --changes: '\A\A https://github.com/vednoc/dark-whatsapp'
 
         /// Custom UI font.
         --ui-font: ui_font, Segoe UI, Helvetica Neue, Helvetica, Lucida Grande,
