--- a/wa.user.styl
+++ b/wa.user.styl
@@ -6,7 +6,7 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      3.0.0-rc.1
+@version      3.0.0-rc.2
 @license      MIT
 @preprocessor stylus
 
@@ -248,7 +248,7 @@ ac5 = var(--ac-5)
 @-moz-document domain('web.whatsapp.com') {
     :root:not(#z), .dark:not(#z) {
         /// Userstyle info and announcements.
-        --version: 'Dark-WhatsApp 3.0.0-rc.1 — August 1st, 2020'
+        --version: 'Dark-WhatsApp 3.0.0-rc.2 — August 4th, 2020'
         --message: 'The v3 is almost here! It will be released in a week ' + \
                    'from now. This update is here to let you know about ' + \
                    'upcoming changes – see the changelog for more info. '
