--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1462,6 +1462,18 @@ ac5 = var(--ac-5)
                     bottom: 3px i
                 }
             }
+
+            /// Google Maps timestamps.
+            /[style *= 'height'][data-plain-text *= 'maps.google.com'] {
+                + div[class] > [role] {
+                    padding: 2px 4px i
+                    background-color: to_rgba('bg-1', 0.7) i
+                    rad: (tail_style == 'fb-like') ? 16px i : 5px i
+                }
+
+                /// Live location overlay.
+                /.a221_ { background-color: to_rgba('bg-4', 0.5) i }
+            }
         }
 
         /// Feat -> Blur images/videos.
@@ -1536,6 +1548,11 @@ ac5 = var(--ac-5)
 
             /// Feat -> Input border radius.
             ._3uMse { rad: var(--r-inputs) i }
+        }
+
+        /// Fix styles for Google Maps.
+        img[src *= 'maps.googleapis.com'] {
+            filter: invert(0.8) hue-rotate(180deg) i
         }
 
         /// Fix unread messages in dark mode. @upstream
