docs: add changelog for 3.0.0-rc.3 release

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1949,7 +1949,7 @@ ac5 = var(--ac-5)
         }
 
         /// Feat -> Collapse messages for `fb-like` tail style and `RTL` tweaks.
-        if (fb_compact && rtl_header && tail_style == 'fb-like') {
+        if (rtl_format && tail_style == 'fb-like') {
             rtl = '.eRacY[dir = "rtl"]'
             ltr = '._2oWZe'
             big = '._20sYJ'
