--- a/wa.user.styl
+++ b/wa.user.styl
@@ -6,7 +6,7 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      3.0.0-rc.2
+@version      3.0.0-rc.3
 @license      MIT
 @preprocessor stylus
 
@@ -249,10 +249,9 @@ ac5 = var(--ac-5)
 @-moz-document domain('web.whatsapp.com') {
     :root:not(#z), .dark:not(#z) {
         /// Userstyle info and announcements.
-        --version: 'Dark-WhatsApp 3.0.0-rc.2 — August 4th, 2020'
-        --message: 'The v3 is almost here! It will be released in a week ' + \
-                   'from now. This update is here to let you know about ' + \
-                   'upcoming changes – see the changelog for more info. '
+        --version: 'Dark-WhatsApp 3.0.0-rc.3 — August 8th, 2020'
+        --message: 'The v3 is almost here! Delaying the full-release until ' + \
+                   'next week – see the changelog for more info. '
         --changes: '\A\A https://github.com/vednoc/dark-whatsapp'
 
         /// Custom UI font.
