modals: add hover animation for toolbar icons

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1323,6 +1323,7 @@ ac5 = var(--ac-5)
         /#side > header,
         /#main > div + header,
         /#main > footer > .copyable-area,
+        /.overlay > div:first-child,
         /.copyable-area > header {
             button:not([data-animate-menu-icons-item]), [role = 'button'] {
                 [data-icon] { transition: fill-opacity 0.3s ease i }
