chat: fix disabled big emojis in fb-like tails

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -2017,6 +2017,8 @@ ac5 = var(--ac-5)
                             > img { width: 20px i; height: @width }
                         }
                     }
+                } else {
+                    { big } { padding-bottom: 0 i }
                 }
             }
         }
