--- a/wa.user.styl
+++ b/wa.user.styl
@@ -115,7 +115,6 @@
 /// All colors: `c: fg bd bg`
 /// Only border-color: `c: 0 bd`
 c(x, y = 0, z = 0, xi = 1, yi = 1, zi = 1) {
-    i = !important;
     if x is a 'call' or x is a 'rgba' {            color: xi is 0? x : x i }
     if y is a 'call' or y is a 'rgba' {     border-color: yi is 0? y : y i }
     if z is a 'call' or z is a 'rgba' { background-color: zi is 0? z : z i }
@@ -141,7 +140,7 @@ to_svg(input) {
 // Rounded corners.
 rad() { border-radius: arguments }
 
-/// Remove browser prefixes.
+/// Remove old browser prefixes.
 vendors = official
 
 /// Feat -> Base color-scheme toggle. #32
@@ -159,7 +158,7 @@ if (theme == 'custom') {
     AC = #d47d3f
 }
 
-/// Helper variables.
+/// Helpers.
 t  = transparent
 i  = !important
 _d = darken
@@ -170,14 +169,14 @@ OM = next_omsg
 
 // Color generator.
 /// TODO: Needs more polish.
-if(dark(BG)) {
-    a1 =  10%; a2 =  20%; a3 =  30%; a4 =  78%; a5 =  88%;
+if (dark(BG)) {
+    a1 =  10; a2 =  20; a3 =  30; a4 =  78; a5 =  88;
     b1 = (BA + 10); b2 = (BA - 5); b3 = (BA - 10); b4 = (BA - 15); b5 = (BA - 20)
-    f1 = -10%; f2 =  10%; f3 =  20%; f4 =  30%; f5 =  40%;
+    f1 = -10; f2 =  10; f3 =  20; f4 =  30; f5 =  40;
 } else {
-    a1 =  10%; a2 =  15%; a3 =  30%; a4 =  60%; a5 =  70%;
-    b1 = -10%; b2 =  08%; b3 =  16%; b4 =  24%; b5 =  32%;
-    f1 = -05%; f2 = -10%; f3 = -15%; f4 = -20%; f5 = -30%;
+    a1 =  10; a2 =  15; a3 =  30; a4 =  60; a5 =  70;
+    b1 = -10; b2 =  08; b3 =  16; b4 =  24; b5 =  32;
+    f1 = -05; f2 = -10; f3 = -15; f4 = -20; f5 = -30;
 }
 
 // Feat -> Custom colors for message bubble.
@@ -1323,7 +1322,7 @@ ac5 = var(--ac-5)
     }
 
     // Feat -> Consistent drawer headers.
-    if(app_c_h) {
+    if (app_c_h) {
         ._1fiOp, ._2TZYF {
             height: 59px i
             justify-content: center i
